--- a/business.html
+++ b/business.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <link rel="stylesheet" href="./css/normalize.css">
   <link rel="stylesheet" href="./css/style.css">
-  <title>株式会社DIVE</title>
+  <title>INGRID</title>
 </head>
 <body>
   <div class="container">
