--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" href="./css/normalize.css">
   <link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" href="./css/contact.css">
-  <title>株式会社DIVE</title>
+  <title>INGRID</title>
 </head>
 <body>
   <div class="container">
