--- a/contact.html
+++ b/contact.html
@@ -10,9 +10,8 @@
 <body>
   <div class="container">
     <header class="header clearfix">
-      <a href="index.html">
-        <h1 id="logo">INGRID</h1>
-        <img src="./images/logo.png" class="logo_image">
+      <a href="index.html" id="logo">
+        <h1>INGRID</h1>
       </a>
       <nav>
         <ul class="top_menu clearfix">
@@ -23,13 +22,13 @@
         </ul>
       </nav>
     </header>
-    <img src="./images/contact.png" class="image_area">
+    <img src="./images/contact05.png" class="image_area" id="target">
     <div class="wrapper clearfix">
       <aside class="side_menu">
         <nav>
           <ul>
-            <li><a href="contact.html">事業内容</a></li>
-            <li class="point"><a href="cuntact.html">会社概要</a></li>
+            <li><a href="business.html">事業内容</a></li>
+            <li class="point"><a href="company.html">会社概要</a></li>
             <li><a href="contact.html">お問い合わせ</a></li>
           </ul>
         </nav>
