--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
 <body>
   <div class="container">
     <header class="header clearfix">
-      <a href="index.html">
-        <h1 id="logo">INGRID</h1>
-        <!-- <img src="./images/logo.png" class="logo_image"> -->
+      <a href="index.html" id="logo">
+        <h1>INGRID</h1>
       </a>
       <nav>
         <ul class="top_menu clearfix">
@@ -41,13 +40,13 @@
       <article class="content">
         <h2>新着情報</h2>
         <div class="news">
-          <div class="banner_content">
-            <p>
-              <a href="#"><img src="./images/banner02.png"></a>
-            </p>
-            <p>
-              <a href="#"><img src="./images/banner03.png"></a>
-            </p>
+          <div class="banner_content">            
+            <a href="#" class="banner-img">
+              <img src="./images/banner02.png">
+            </a>
+            <a href="#" class="banner-img">
+              <img src="./images/banner03.png" class="banner-img">
+            </a>
           </div>
           <ul>
             <li>Webサイトをリニューアルしました！</li>
