--- a/business.html
+++ b/business.html
@@ -9,9 +9,8 @@
 <body>
   <div class="container">
     <header class="header clearfix">
-      <a href="index.html">
-        <h1 id="logo">INGRID</h1>
-        <img src="./images/logo.png" class="logo_image">
+      <a href="index.html" id="logo">
+        <h1>INGRID</h1>
       </a>
       <nav>
         <ul class="top_menu clearfix">
@@ -22,7 +21,8 @@
         </ul>
       </nav>
     </header>
-    <img src="./images/business.png" class="image_area">
+    <img src="./images/businesscontent.png" class="image_area"
+    id="target">
     <div class="wrapper clearfix">
       <aside class="side_menu">
         <nav>
