ダミー文章に差し替え

--- a/business.html
+++ b/business.html
@@ -34,12 +34,12 @@
         </nav>
       </aside>
       <article class="content">
-        <h2>時代を先取る商品が私たちにはあります！</h2>
+        <h2>指標が自明であるときには s = 1 でオーダー</h2>
           <p>
-          優れた製品を絶えず提供し、常にお客様のニーズに応えられる会社でありたい。<br>
-          それが当社のモットーです。<br>
-          私どもは創業以来様々な商品を作りあげ、多くの成果をあげてまいりました。
-          これからもお客様の満足の追求を第一として考え、豊かな生活の一助となるように努めてまいります。
+          複素数体であれば、任意のCM-タイプの A は、実際、数体である定義体<br>
+          CM-タイプのアーベル多様体の分類<br>
+          原始ヘッケ指標（原始ディリクレ指標に同じ方法である modulus に相対的に定義された）に対し、
+          これらのL-函数が指標の L-函数の函数等式を満たし、L-函数の複素共役指標であることを示した。
           </p>
         <img src="./images/computer.png" class="image_area">
       </article>
